force-app/main/default/objects/DebugEntry__c/DebugEntry__c.object-meta.xml
<CustomObject>
    <description>Used to store debug information coming from ApexClasses</description>
    <label>Debug Entry</label>
    <nameField>
        <displayFormat>Debug-{000000}</displayFormat>
        <label>Debug Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>