force-app/main/default/objects/DebugEntry__c/fields/className__c.field-meta.xml
<CustomField>
    <fullName>className__c</fullName>
    <description>This DebugEntry has been created in the context of Class Name</description>
    <inlineHelpText>This class created this debug entry</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>