force-app/main/default/objects/DebugEntry__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <description>Column in source code this Entry originates from</description>
    <inlineHelpText>Column in source code this Entry originates from</inlineHelpText>
    <label>Code Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>