force-app/main/default/objects/DebugEntry__c/fields/cpuTimeUsage__c.field-meta.xml
<CustomField>
    <fullName>cpuTimeUsage__c</fullName>
    <description>stores the cpu time used of the whole transaction</description>
    <inlineHelpText>This is the CPU used by the transaction</inlineHelpText>
    <label>CPU Time Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>