force-app/main/default/objects/DebugEntry__c/fields/displayHeader__c.field-meta.xml
<CustomField>
    <fullName>displayHeader__c</fullName>
    <description>Used on compact layout only</description>
    <formula>className__c + ' : ' + methodName__c + ' at ' + TEXT(startDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please ignore</inlineHelpText>
    <label>Display Header</label>
    <type>Text</type>
</CustomField>