force-app/main/default/objects/DebugEntry__c/fields/ExceptionThrown__c.field-meta.xml
<CustomField>
    <fullName>ExceptionThrown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Logger logs at least one Exceptions, this field is true</description>
    <inlineHelpText>At least one exception was logged during execution</inlineHelpText>
    <label>Exception Thrown</label>
    <type>Checkbox</type>
</CustomField>