force-app/main/default/objects/DebugEntry__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>Line in source code from which this Entry originates</description>
    <inlineHelpText>Line in source code from which this Entry originates</inlineHelpText>
    <label>Code Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>