force-app/main/default/objects/DebugEntry__c/fields/logEntryJSON__c.field-meta.xml
<CustomField>
    <fullName>logEntryJSON__c</fullName>
    <description>Contains the JSON of a Log Entry Array</description>
    <inlineHelpText>Please ignore if this is visible to you.</inlineHelpText>
    <label>Log Entry JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>