force-app/main/default/objects/DebugEntry__c/fields/methodName__c.field-meta.xml
<CustomField>
    <fullName>methodName__c</fullName>
    <description>The method in context when this debug entry was created</description>
    <inlineHelpText>Method from which this entry was created</inlineHelpText>
    <label>methodName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>