force-app/main/default/objects/DebugEntry__c/fields/runningUser__c.field-meta.xml
<CustomField>
    <fullName>runningUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The context/running user of the class responsible for this DebugEntry</description>
    <inlineHelpText>Who dun it?</inlineHelpText>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DebugEntries</relationshipName>
    <type>Lookup</type>
</CustomField>