force-app/main/default/objects/DebugEntry__c/fields/startDateTime__c.field-meta.xml
<CustomField>
    <fullName>startDateTime__c</fullName>
    <description>Indicates startDateTime of the transaction that leads to the sending of this log event.</description>
    <inlineHelpText>When did this occur?</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>