force-app/main/default/objects/DebugEntry__c/fields/transactionUUID__c.field-meta.xml
<CustomField>
    <fullName>transactionUUID__c</fullName>
    <description>Unique Identifier of an Apex Transaction</description>
    <label>transactionUUID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>