force-app/main/default/objects/DebugEntry__c/fields/TriggerOperation__c.field-meta.xml
<CustomField>
    <fullName>TriggerOperation__c</fullName>
    <description>Indicates this DebugEntry belongs to a specific trigger operation</description>
    <inlineHelpText>Indicates this DebugEntry belongs to a specific trigger operation</inlineHelpText>
    <label>Trigger Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>