force-app/main/default/objects/DebugEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>startDateTime__c</columns>
    <columns>className__c</columns>
    <columns>methodName__c</columns>
    <columns>ExceptionThrown__c</columns>
    <columns>cpuTimeUsage__c</columns>
    <columns>TriggerOperation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>